@@ -98,7 +98,7 @@ class SearchState {
         synchronized (_pendingPeers) {
             _pendingPeers.addAll(pending);
             for (Iterator iter = pending.iterator(); iter.hasNext(); )
-                _pendingPeerTimes.put(iter.next(), new Long(_context.clock().now()));
+                _pendingPeerTimes.put(iter.next(), Long.valueOf(_context.clock().now()));
         }
         synchronized (_attemptedPeers) {
             _attemptedPeers.addAll(pending);
@@ -107,7 +107,7 @@ class SearchState {
     public void addPending(Hash peer) {
         synchronized (_pendingPeers) {
             _pendingPeers.add(peer);
-            _pendingPeerTimes.put(peer, new Long(_context.clock().now()));
+            _pendingPeerTimes.put(peer, Long.valueOf(_context.clock().now()));
         }
         synchronized (_attemptedPeers) {
             _attemptedPeers.add(peer);
